# chip8-emulator

./: Cargo.toml  README.md  main.rs
src/: chip8.rs  counter.rs  cpu.rs  input.rs  keyboard.rs  lib.rs  main.rs  ram.rs  register.rs  screen.rs  stack.rs
src/cpu/: cpu.rs  instruction.rs  mod.rs
src/io/: keyboard.rs  mod.rs  screen.rs  sound.rs
src/memories/: mod.rs  ram.rs  stack.rs
src/registers/: I.rs  counter.rs  general.rs  mod.rs  timer.rs
src/resources/: font.rs
